<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sec_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:src="@drawable/logo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_user"
                    android:layout_marginRight="10dp" />


                <EditText
                    android:id="@+id/txtLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:focusable="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="12dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/ic_password"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/txtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/password_login"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/customer_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@drawable/button_login_background"
                    android:text="@string/login"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView_forget_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/sec_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/no_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp" />

            <Button
                android:id="@+id/navRegister"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_login_background"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:textSize="8sp" />

        </LinearLayout>


        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

    </LinearLayout>
</RelativeLayout>