<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sec_reg_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/text_sign_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_user"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/nameEdText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:textCursorDrawable="@drawable/cursor"
                    android:hint="@string/name_login"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_email"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/emailEdText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/email_login"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_password"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/passwordEdText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/password_login"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ic_phone"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:id="@+id/phoneEdText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/phone_login"
                    android:textCursorDrawable="@drawable/cursor"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_login_background"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/register"
                android:textColor="@color/white"/>



        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/sec_reg_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_reg_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/already_account"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/navLogin"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_login_background"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="8sp" />


        </LinearLayout>

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/white" />


    </LinearLayout>
</RelativeLayout>